--- a/ui/style.css
+++ b/ui/style.css
@@ -19,4 +19,20 @@ body {
 .img-medium {
     height: 200px;
 }
+  
+  
+  
+.some{
+    
+    max-width: 900px;
+    margin: 0 auto ;
+    color:red;
+    font-family: verdana;
+    padding-right: 10px;
+    padding-left: 10px;
+    
+        
+    }
+    
+    
 
