--- a/ui/style.css
+++ b/ui/style.css
@@ -26,7 +26,7 @@ body {
     
     max-width: 900px;
     margin: 0 auto ;
-    color:red;
+    color:blue;
     font-family: verdana;
     padding-right: 10px;
     padding-left: 10px;
